--- a/styles.css
+++ b/styles.css
@@ -3,18 +3,23 @@
 
 body {
     font-family: Roboto, sans-serif;
+    background-color: #1F2937;
 }
 
 .section1, .section5 {
     background-color: #1F2937;
 }
-
+.section2 {
+    background-color: white;
+}
 
 .header1 {
     display: flex;
     align-items: center;
     justify-content: space-between;
     background-color: #1F2937;
+    margin: 0 100px;
+    padding-top: 5px;
     
     
 
@@ -61,7 +66,7 @@ a {
 }
 
 .button1 {
-    background-color: rgb(0, 94, 255);
+    background-color:#3882f6;
     color: white;
     padding: 5px 32px;
     border-radius: 10px;
@@ -91,8 +96,36 @@ a {
     color: white;
     background-color: grey;
     padding: 86px 64px;
+}
 
+.section2 {
+    background-color: white;
 
 }
+.header2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
+.content2 {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card2{
+    max-width: 200px;
+}
+.square2 {
+    width: 20px;
+    height: 20px;
+    border: #3882f6 solid;
+}
+
 /* 
-DISTRIBUIR CONTENT1 EN FORMA FLEX, DAR FORMATO TITULO, SUBTITLE Y BOTON
+ARREGLAR COLOR LINKS HEADER (AGREGAR .LINKS1{} Y CONFIGURAR)
+
+SEGUIR CON SIGUIENTE SECCION/*
