--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@ body {
     background-color: #1F2937;
 }
 
+/* SECTION 1 */
+
 .section1, .section5 {
     background-color: #1F2937;
 }
@@ -13,15 +15,19 @@ body {
     background-color: white;
 }
 
+.section1 {
+    display: flex;
+    flex-direction: column;
+}
 .header1 {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     background-color: #1F2937;
-    margin: 0 100px;
+    /* margin: 0 100px; */
     padding-top: 5px;
-    
-    
+    align-self: center;
+    gap:210px;
 
 }
 
@@ -95,18 +101,23 @@ a {
     align-items: center;
     color: white;
     background-color: grey;
+    border-radius: 4px;
     padding: 86px 64px;
 }
 
+/* SECTION 2 */
+
 .section2 {
     background-color: white;
+    padding: 64px;
+    padding-top: 0px;
 
 }
 .header2{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 16px;
+    padding: 32px;
     font-size: 36px;
     font-weight: bolder;
     color: #1F2937;
@@ -114,18 +125,127 @@ a {
 .content2 {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    gap: 8px;
 }
 
 .card2{
     max-width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 18px;
+    color: grey;
+    text-align:center;
+    gap: 12px;
+
+
 }
 .square2 {
-    width: 20px;
-    height: 20px;
-    border: #3882f6 solid;
+    width: 150px;
+    height: 150px;
+    border-radius: 15px;
+    border: #3882f6 solid 4px;
+    
 }
 
-/* 
-ARREGLAR COLOR LINKS HEADER (AGREGAR .LINKS1{} Y CONFIGURAR)
+/* SECTION 3 */
+.section3 {
+    background-color: #E5E7EB;
+    display: flex;
+    justify-content: center;
+}
 
-SEGUIR CON SIGUIENTE SECCION/*
+.content3{
+    padding: 64px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    max-width: 1000px;
+
+}
+.quote3 {
+    font-size: 36px;
+    font-weight:100;
+    font-style: italic;
+    color: #1F2937;
+    align-self: center;
+
+}
+.author3 {
+text-align: right;
+font-weight: bold;
+font-size: 26px;
+align-self:self-end;
+
+
+}
+
+/* SECTION 4 */
+.section4 {
+    display: flex;
+    background-color:#F9FAF8;
+    justify-content: center;
+    align-items: center;
+}
+
+.content4 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 80px;
+    
+}
+
+.blue-box4{
+    display: flex;
+    padding: 32px 64px;
+    border-radius: 4px;
+    background-color: #3882f6;
+    justify-content: space-between;
+    align-items: center;
+    gap: 64px;
+}
+
+.right4 .left4 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.button4{
+    background-color: transparent  ;
+    color: white;
+    border: solid 2px #F9FAF8;
+    border-radius: 6px;
+    padding: 4px 28px;
+}
+
+.right4-upper {
+    font-size: 24px;
+    color: #F9FAF8;
+    font-weight: bold;
+}
+
+.right4-lower {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+/* arreglar spacing entre button4 y right4. se necesita padding en el button4?  */
+
+.section5 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
+
+}
+
+.text5 {
+    color: #F9FAF8;
+    font-weight: 100;
+
+}
